# Raycaster-C

./: .clang-format  .gitignore  CMakeLists.txt
shaders/: shader.frag  shader.vert
src/: color.c  color.h  color_hash_map.c  color_hash_map.h  file_reader.c  file_reader.h  log.h  main.c  map.c  map.h  player.c  player.h  raycaster.c  raycaster.h  renderer.c  renderer.h  shaders.c  shaders.h  util.h  window.c  window.h
